--- a/index.html
+++ b/index.html
@@ -514,6 +514,7 @@ pre.pygments .tok-il { color: #0000DD; font-weight: bold } /* Literal.Number.Int
 <span id="author" class="author">The PartiQL Specification Committee</span><br>
 <span id="revnumber">version 0,</span>
 <span id="revdate">2023-11-15</span>
+<br><span id="revremark">PRE-RELEASE</span>
 </div>
 <div id="toc" class="toc">
 <div id="toctitle">Contents</div>
@@ -5174,7 +5175,7 @@ respect to schema addition.</p>
 <div id="footer">
 <div id="footer-text">
 Version 0<br>
-Last updated 2023-11-15 19:00:08 UTC
+Last updated 2023-11-15 19:32:59 UTC
 </div>
 </div>
 <script type="text/x-mathjax-config">
