--- a/index.html
+++ b/index.html
@@ -512,7 +512,7 @@ pre.pygments .tok-il { color: #0000DD; font-weight: bold } /* Literal.Number.Int
 <h1>PartiQL Specification</h1>
 <div class="details">
 <span id="author" class="author">The PartiQL Specification Committee</span><br>
-<span id="revnumber">version 0,</span>
+<span id="revnumber">version v0.3.0-HEAD,</span>
 <span id="revdate">2023-11-15</span>
 <br><span id="revremark">PRE-RELEASE</span>
 </div>
@@ -5174,8 +5174,8 @@ respect to schema addition.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Version 0<br>
-Last updated 2023-11-15 19:32:59 UTC
+Version v0.3.0-HEAD<br>
+Last updated 2023-11-15 22:15:53 UTC
 </div>
 </div>
 <script type="text/x-mathjax-config">
